# m2u51_aes_xom_boot

./: README.md  m2u54 aes boot.pptx
.github/: copilot-instructions.md
SampleCode/ISP/ISP_UART/: fmc_user.c  isp_user.c  isp_user.h  main.c  targetdev.c  uart_transfer.c  xom_verify.h
SampleCode/ISP/ISP_UART/KEIL/: ISP_UART.uvguix.JCLiu  ISP_UART.uvoptx  ISP_UART.uvprojx  Nu_Link_Driver.ini  aes_xom.c  aprom_isp_0x0.scf
SampleCode/StdDriver/GPIO_OutputInput/Keil/: GPIO_OutputInput.uvguix.JCLiu  GPIO_OutputInput.uvoptx  GPIO_OutputInput.uvprojx  Nu_Link_Driver.ini  aprom_0x3000.scf  aprom_0x4000.scf
SampleCode/nu_com_isp_sboot/: CMakeLists.txt  nu_com_isp_sboot.c
